Updated dependencies (discord.py and buttons for eval and slash commands)

--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,8 @@ certifi==2021.10.8
 cffi==1.15.0
 chardet==4.0.0
 charset-normalizer==2.0.8
-discord.py==1.7.3
+discord.py==2.4.0
+buttons
 dnspython==2.1.0
 ffmpeg-python==0.2.0
 ffprobe-python==1.0.3
