Added 2 new commands to info cog (weatherinfo and colorinfo), weatherinfo requires an OpenWeatherMap API key so updated the bot_info_template.json file. Also updated dependencies to include the required dependencies for the colorinfo and ping commands.

--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,9 @@ discord.py==2.4.0
 dnspython==2.1.0
 ffmpeg-python==0.2.0
 ffprobe-python==1.0.3
+Pillow
+webcolors
+psutil
 future==0.18.2
 idna==3.3
 multidict==5.2.0
