WIP allowlist and blocklist system along with global user and server blocks for bot owner

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,10 @@
 .vscode
 cache.json
 bot_info.json
-blacklistedusers.json
+allowlist.json
+blocklist.json
+global_server_blocks.json
+global_user_blocks.json
 
 # These should be downloaded manually
 vids/*
