--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,5 @@
 aiohttp
-async-timeout==3.0.1
-attrs==21.2.0
-Brotli==1.0.9
-certifi==2021.10.8
-cffi==1.15.0
-chardet==4.0.0
-charset-normalizer==2.0.8
-discord.py==2.5.2
-dnspython==2.1.0
+discord.py
 roblox
 Pillow
 webcolors
@@ -18,16 +10,5 @@ spotipy
 isodate
 dateparser
 ollama
-future==0.18.2
-idna==3.3
-multidict==5.2.0
-mutagen==1.46.0
-pycparser==2.21
-pycryptodomex==3.17
-PyNaCl==1.4.0
-six==1.16.0
-typing_extensions==4.0.0
-urllib3==1.26.7
-websockets==11.0.1
-yarl==1.7.2
+PyNaCl
 yt-dlp
