Added some new languages. `PHP`, `Ruby`, `Lua`, `Go`, `Rust`, `C`, `C++`, `C#`, and `Zig`

--- a/g-coder/server/Dockerfile
+++ b/g-coder/server/Dockerfile
@@ -1,31 +1,45 @@
 FROM python:3.13.3-slim
 
 
-RUN groupadd -r gcoder && useradd -r -g gcoder -d /app -s /sbin/nologin gcoder
-
-WORKDIR /app
-
 
 RUN apt-get update && apt-get install -y --no-install-recommends \
     curl \
+    xz-utils \
     ffmpeg \
     imagemagick \
     sox \
     nodejs \
     npm \
+    php \
+    ruby-full \
+    lua5.4 \
+    golang \
+    clang \
+    gcc \
+    g++ \
+    make \
+    cmake \
+    mono-complete \
+    bash \
+    cargo \
     && rm -rf /var/lib/apt/lists/*
 
-
+RUN curl -LO https://ziglang.org/download/0.11.0/zig-linux-x86_64-0.11.0.tar.xz \
+    && tar -xf zig-linux-x86_64-0.11.0.tar.xz \
+    && mv zig-linux-x86_64-0.11.0 /opt/zig \
+    && ln -s /opt/zig/zig /usr/local/bin/zig
+RUN groupadd -g 1000 gcoder && useradd -r -u 1000 -g gcoder -m -d /home/gcoder gcoder
 COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 RUN pip install numpy requests pillow
 RUN npm install -g typescript ts-node
 
+WORKDIR /app
 
-COPY app.py .
+COPY . /app
 
 
-RUN mkdir -p /app/executions && chown gcoder:gcoder /app/executions
+RUN mkdir -p /app/executions && chown gcoder:gcoder /app/executions && chmod 775 /app/executions/
 
 USER gcoder
 
