--- a/g-coder/server/Dockerfile
+++ b/g-coder/server/Dockerfile
@@ -51,11 +51,8 @@ COPY . /app
 
 
 RUN mkdir -p /app/executions && chown gcoder:gcoder /app/executions && chmod 775 /app/executions/
-USER root
-COPY entrypoint.sh /entrypoint.sh
-RUN chmod +x /entrypoint.sh
-USER gcoder
+
 
 EXPOSE 8000
 
-CMD ["/entrypoint.sh"]
+CMD ["uvicorn", "app:app", "--host", "0.0.0.0", "--port", "8000"]
