Add frei0r-plugins to g-coder

--- a/g-coder/server/Dockerfile
+++ b/g-coder/server/Dockerfile
@@ -7,6 +7,7 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
     git \
     xz-utils \
     ffmpeg \
+    frei0r-plugins \
     imagemagick \
     sox \
     nodejs \
