Update zig version in g-coder

--- a/g-coder/server/Dockerfile
+++ b/g-coder/server/Dockerfile
@@ -32,9 +32,9 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
     zlib1g-dev \
     && rm -rf /var/lib/apt/lists/*
 
-RUN curl -LO https://ziglang.org/download/0.14.0/zig-linux-x86_64-0.14.0.tar.xz \
-    && tar -xf zig-linux-x86_64-0.14.0.tar.xz \
-    && mv zig-linux-x86_64-0.14.0 /opt/zig \
+RUN curl -LO https://ziglang.org/download/0.14.1/zig-x86_64-linux-0.14.1.tar.xz \
+    && tar -xf zig-x86_64-linux-0.14.1.tar.xz \
+    && mv zig-x86_64-linux-0.14.1 /opt/zig \
     && ln -s /opt/zig/zig /usr/local/bin/zig
 RUN groupadd -g 1000 gcoder && useradd -r -u 1000 -g gcoder -m -d /home/gcoder gcoder
 COPY requirements.txt .
