--- a/g-coder/docker-compose.yml
+++ b/g-coder/docker-compose.yml
@@ -6,6 +6,7 @@ services:
     user: "1000:1000"
     ports:
       - "8000:8000"
+    restart: unless-stopped
     volumes:
       - ./executions:/home/gcoder/executions
     environment:
