Fix issue in js and ts in g-coder where you are required to use the full path of a package to import them
Also add ImageScript npm package by matmen

--- a/g-coder/server/Dockerfile
+++ b/g-coder/server/Dockerfile
@@ -41,14 +41,15 @@ COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 RUN pip install numpy requests pillow bgutil-ytdlp-pot-provider typed-ffmpeg
 RUN pip install --pre -U "yt-dlp[default]"
-RUN npm install -g typescript node ts-node @types/node mathjs
+RUN npm install -g typescript node ts-node @types/node mathjs imagescript
+ENV NODE_PATH=/usr/local/lib/node_modules
 USER gcoder
 RUN mkdir -p /home/gcoder/executions && \
     mkdir -p /home/gcoder/executions/input && \
     mkdir -p /home/gcoder/executions/output && \
     chmod 775 /home/gcoder/executions && \
     cd /home/gcoder && \
-    git clone --single-branch --branch 1.2.1 https://github.com/Brainicism/bgutil-ytdlp-pot-provider.git && \
+    git clone --single-branch --branch 1.2.2 https://github.com/Brainicism/bgutil-ytdlp-pot-provider.git && \
     cd bgutil-ytdlp-pot-provider/server/ && \
     npm install && \
     npx tsc
