--- a/g-coder/docker-compose.yml
+++ b/g-coder/docker-compose.yml
@@ -8,7 +8,7 @@ services:
       - "8000:8000"
     restart: unless-stopped
     volumes:
-      - ./executions:/home/gcoder/executions
+      - ./executions:/home/gcoder
     environment:
       - FILE_RETENTION_MINUTES=30
     healthcheck:
